# napari-console

./: pyproject.toml  setup.cfg
