[build-system]
requires = [
  "setuptools >= 42",
  "wheel",
  "setuptools_scm>=3.4"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "napari_console/_version.py"

[project]
name = "napari-console"
description = "A plugin that adds a console to napari"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  {email = "sofroniewn@gmail.com", name="Nicholas Sofroniew"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Framework :: napari",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License"
]

dependencies = [
    "ipykernel>=5.2.0",
    "IPython>=7.7.0",
    "napari-plugin-engine>=0.1.9",
    "qtconsole>=4.5.1,!=4.7.6",
    "qtpy>=1.7.0",
]

[project.entry-points."napari.plugin"]
console = "napari_console"
