[metadata]
url = https://github.com/napari/napari-console
license = BSD 3-Clause

long_description = file: README.md
long_description_content_type = text/markdown


[options]
zip_safe = False
packages = find:
python_requires = >=3.7
include_package_data = True


[options.package_data]
* = *.pyi
napari_builtins =
    builtins.yaml

# for explanation of %(extra)s syntax see:
# https://github.com/pypa/setuptools/issues/1260#issuecomment-438187625
# this syntax may change in the future

[options.entry_points]
napari.plugin =
   console = napari_console 
